Refactor AccessFilter: improve resource permission check and null handling
Co-authored-by: 747011882 <747011882@qq.com>